# yt_image_extractor

./: .gitignore  README.md  pyproject.toml  yt_image_extractor.py
utils/: helpers.py  video_processor.py
