[project]
name = "yt_image_extractor"
version = "0.1.2"
description = "Downloads YouTube video and extracts video frames as a collection of image files"
authors = [{ name = "Mitch Haddadi", email = "12067255+dfirsec@users.noreply.github.com" }]
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "rich>=14.2.0",
    "yt-dlp>=2025.10.22",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
